--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Rocha Games Studio
+name: GiveApps
 
 # Short bio or description (displayed in the header)
-description: Studio de Jogos
+description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://rochagames.github.io/images/site-logo.png
+avatar: https://giveappsoficial.github.io/images/site-logo.png
 
 #
 # Flags below are optional
